# tessera

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  tessera.md
block_explorer/: .env.example  Cargo.toml
block_explorer/src/: config.rs  lib.rs  prelude.rs  sdk.rs
block_explorer/src/camera/: fly.rs  mod.rs
block_explorer/src/data/: channel.rs  evm.rs  mod.rs  model.rs  solana.rs
block_explorer/src/render/: mod.rs  slabs_and_cubes.rs
block_explorer/src/scene/: arcs.rs  blob_links.rs  blocks.rs  contracts.rs  labels.rs  materials.rs  mod.rs  screenshot.rs  transactions.rs
block_explorer/src/ui/: hud.rs  inspector.rs  mod.rs  timeline.rs
block_explorer/tests/: fetcher.rs  ingest_test.rs
src/: main.rs
