[package]
name = "block_explorer"
version = "0.1.0"
edition = "2021"
description = "3D block space explorer — EVM blocks as slabs, transactions as cubes"

[dependencies]
bevy = "0.15"
alloy = { version = "1.0", features = ["provider-http", "rpc-types", "consensus", "network"] }
op-alloy = { version = "0.23", features = ["network", "rpc-types", "consensus"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
crossbeam-channel = "0.5"
alloy-chains = "0.2"
url = "2"
dotenvy = "0.15"
bevy_egui = "0.33"

[dev-dependencies]
testcontainers-modules = { version = "0.14", features = ["anvil"] }

[features]
integration = []
